RESOLVED FIXED54997
Fix MIPS build with new patchOffsetPut/GetByIdPropertyMapOffset1/2 values
https://bugs.webkit.org/show_bug.cgi?id=54997
Summary Fix MIPS build with new patchOffsetPut/GetByIdPropertyMapOffset1/2 values
Chao-ying Fu
Reported 2011-02-22 14:02:40 PST
Hi All, I will post a patch to fix MIPS build with new patchOffsetPutByIdPropertyMapOffset1, patchOffsetPutByIdPropertyMapOffset2, patchOffsetGetByIdPropertyMapOffset1, patchOffsetGetByIdPropertyMapOffset2. Thanks! Regards, Chao-ying
Attachments
Fix offsets for MIPS (3.79 KB, patch)
2011-02-22 14:14 PST, Chao-ying Fu
no flags
Chao-ying Fu
Comment 1 2011-02-22 14:14:10 PST
Created attachment 83385 [details] Fix offsets for MIPS Here is the patch to fix MIPS build, due to the recent change from a LEA to a load. Thanks!
Eric Seidel (no email)
Comment 2 2011-02-24 03:03:59 PST
Comment on attachment 83385 [details] Fix offsets for MIPS rs=me.
WebKit Commit Bot
Comment 3 2011-02-24 05:25:40 PST
Comment on attachment 83385 [details] Fix offsets for MIPS Clearing flags on attachment: 83385 Committed r79551: <http://trac.webkit.org/changeset/79551>
WebKit Commit Bot
Comment 4 2011-02-24 05:25:44 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.