2011-02-24  Chao-ying Fu  <fu@mips.com>

Reviewed by Eric Seidel.

        Fix MIPS build with new patchOffsetPut/GetByIdPropertyMapOffset1/2 values
        https://bugs.webkit.org/show_bug.cgi?id=54997

        * jit/JIT.h:
        * jit/JITStubs.cpp:
        (JSC::JITThunks::JITThunks):

Canonical link: https://commits.webkit.org/69471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79551 268f45cc-cd09-0410-ab3c-d52691b4dbfc